syntax = "proto3";

option csharp_namespace = "RedisClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc AddUser (UserInfo) returns (HelloReply);
}

message UserInfo {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}
// The response message containing the greetings.
message HelloReply {
	string message = 1;
}
